--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     width: 100%;
     margin-top: -20px;
-    height: 100%;
+    
     
     margin-left: 5px;
     margin-bottom: -20px;
@@ -54,6 +54,15 @@ body{
 }
 
 .pagina{
+    align-items: center;
+    margin-left: 13%;
+    width: 87%;
+    height: 100%;
+    
+    background-color: #4655A5;
+    padding-top: 10px;
+}
+.paginac{
     align-items: center;
     margin-left: 13%;
     width: 87%;
